@@ -1,6 +1,17 @@
 2008-05-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
 	Changed method signature:
+	BtContext::computeFastSet, DefaultBtContext::extractUrlList
+	* src/BtContext.h
+	* src/DefaultBtContext.cc
+	* src/DefaultBtContext.h
+	* src/DefaultBtInteractive.cc
+	* test/DefaultBtContextTest.cc
+	* test/MockBtContext.h
+
+2008-05-12  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
+	Changed method signature:
 	MultiFileAllocationIterator::makeDiskWriterEntries
 	* src/MultiFileAllocationIterator.cc
 	* src/MultiFileAllocationIterator.h
